# ivrit-py

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCH.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  speechbrain_speaker_id.py
.claude/agents/: architect.md
docs/: streaming-analysis.md  word_level_streaming_options.md
examples/: streaming_demo.py  tts.py  with_runpod.py
ivrit/: __init__.py  audio.py  core.py  diarization.py  types.py  utils.py
src/ivrit/: tts.py  utils.py
tests/: test_batch_transcription.py  test_faster_whisper_predecode.py  test_runpod_persistent_session.py  test_session.py  test_session_pcm_path.py  test_transcribe_async.py  test_transcription.py
