[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ivrit"
version = "0.0.1"
description = "ivrit.ai helper package"
authors = [
  { name="Yair Lifshitz", email="yair@ivrit.ai" },
  { name="Yoad Snapir", email="yoad@ivrit.ai" },
  { name="Yanir Marmor", email="yanir@ivrit.ai" },
  { name="Kinneret Misgav", email="kinneret@ivrit.ai" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.optional-dependencies]
faster-whisper = [
    "faster-whisper>=1.1.1",
]


