[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  { name = "Yair Lifshitz", email = "yair@ivrit.ai" },
  { name = "Yoad Snapir", email = "yoad@ivrit.ai" },
  { name = "Yanir Marmor", email = "yanir@ivrit.ai" },
  { name = "Kinneret Misgav", email = "kinneret@ivrit.ai" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
description = "ivrit.ai helper package"
license = { text = "MIT" }
name = "ivrit"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.4"

dependencies = [
  "faster-whisper>=1.1.1",
  "numpy>=1.20.0",
  "pyannote-audio>=3.3.2",
  "requests>=2.32.3",
  "stable-ts-whisperless>=2.18.3",
]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
ivrit = { workspace = true }

[dependency-groups]
dev = [
  "ivrit",
  "ruff>=0.12.4",
  "dotenv>=0.9.9",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.0.0",
  "pre-commit>=4.2.0",
  "pre-commit-hooks>=5.0.0",
  "taplo>=0.9.3",
]
